Finished up basic styling.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,40 @@ body {
 .main-container {
     background-color: rgb(21,39,63);
 }
+
+/* text */
+
+.title-text {
+    color: rgb(255,255,255);
+    font-family: 'Assistant', sans-serif;
+    font-size: 1.375em;
+    font-weight: 700;
+}
+.description {
+    color: rgb(146,167,198);
+    font-family: 'Assistant', sans-serif;
+    font-size: 1.25em;
+    font-weight: 100;
+    line-height: 1.5em;
+}
+.small-text {
+    font-family: 'Assistant', sans-serif;
+    font-size: 1.125em;
+}
+.price-text {
+    color:rgb(29,253,245);
+    font-weight: 700;
+}
+.time-text {
+    color: rgb(132,167,209);
+}
+.constant {
+    color: rgb(146,167,198);
+}
+.author  {
+    color: rgb(255,255,255);
+}
+
 /* sizing and display */
 .page {
     display: flex;
@@ -21,18 +55,60 @@ body {
 .main-container {
     display: flex;
     flex-direction: column;
-    width: 360px;
-    height: fit-content;
+    width: 350px;
     border-radius: 10px;
+    padding: 25px;
 }
 .picture {
     display: flex;
     justify-content: center;
-    padding: 25px;
+    max-width: fit-content;
+    padding-bottom: 30px;
 }
 .picture img {
     width: 300px;
     height: 300px;
-    text-align: center;
     border-radius: 10px;
+}
+.title-text {
+    padding-bottom: 20px;
+}
+.text {
+    padding-bottom: 30px;
+}
+.info-text {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 25px;
+}
+.price, .time {
+    display: flex;
+    align-items: center;
+}
+.price img {
+    height: 20px;
+    padding-right: 7px;
+}
+.time img {
+    height: 15px;
+    padding-right: 7px;
+}
+hr {
+    border-color: rgb(47,65,89);
+}
+.author {
+    padding-top: 15px;
+    display: flex;
+    align-items: center;
+}
+.author img {
+    height: 33px;
+    border-style: solid;
+    border-radius: 100%;
+    border-color: white;
+    border-width: 1px;
+    margin-right: 15px;
+}
+.constant {
+    padding-right: 3px;
 }
